--- a/index.html
+++ b/index.html
@@ -1,1 +1,8 @@
-<embed id="pdfPlayer" src="./your.pdf" type="application/pdf" width="100%" height="100%" >
+
+---
+ layout: default
+---
+<p>this is test
+hello world1
+lots of planet in the
+</p>
