--- a/index.html
+++ b/index.html
@@ -1,1 +1,1 @@
-<embed id="pdfPlayer" src="./your.pdf" type="application/pdf" width="100%" height="100%" >
+<embed id="resume" src="./Resume_Lin Xia.pdf" type="application/pdf" width="100%" height="100%" >
